src/test/ui/resolve/unresolved_static_type_field.stderr
error[E0425]: cannot find value `cx` in this scope
  --> $DIR/unresolved_static_type_field.rs:19:11
   |
19 |         f(cx);
   |           ^^ did you intend to access a struct field? `self.cx`

error: aborting due to previous error

